fixed spacing issue from last commit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,13 +74,7 @@ body {
     border-width: 1px;
 }
 
-/* trying to get the arrows to stay inside currency exchange at laptop 1024px viewport*/
-/* .stock-table-container {
-    overflow-x: scroll;
-    border-collapse: collapse;
-} */
-
-.currency-table-container {
+.stock-table-container {
     overflow: scroll;
 }
 
